--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,9 @@
       <button type="submit">Search</button>
     </form>
 
-    <div class="gallery">
-    </div>
+<div class="gallery">
+  <!-- Obraz karty -->
+</div>
 
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
