--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,9 @@
 </div>
 
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <!--<include src="./partials/example.html"></include> -->
+    <button type="button" class="load-more is-hidden">Load more</button>
+    <button class="top-btn">🔝</button>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
