--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework11</title>
-    <link rel="stylesheet" href="./sass/index.scss" /> 
-  </head>
-  <body>
-    <form class="search-form" id="search-form">
-      <input 
-      type="text" 
-      name="searchQuery" 
-      autocomplete="off" 
-      placeholder="Search images..." />
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gallery</title>
+  <link rel="stylesheet" href="./sass/index.scss" />
+</head>
+
+<body>
+  <div class="form-wrapper">
+    <form class="search-form" id="search-form">
+      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
       <button type="submit">Search</button>
     </form>
+  </div>
+  <div class="gallery">
+    <!-- Obraz karty -->
+  </div>
+  <button type="button" class="load-more is-hidden">Load more</button>
+  <button class="top-btn">🔝</button>
+  <script type="module" src="./index.js"></script>
+</body>
 
-<div class="gallery">
-  <!-- Obraz karty -->
-</div>
-
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <!--<include src="./partials/example.html"></include> -->
-    <button type="button" class="load-more is-hidden">Load more</button>
-    <button class="top-btn">🔝</button>
-    <script type="module" src="./index.js"></script>
-  </body>
 </html>
