--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,7 @@
           autocomplete="off"
           placeholder="Search images..."
         />
-        <button type="submit">
-          <svg width="20" height="20" fill="rgb(77, 66, 107)">
-            <use href="./symbol-defs.svg#icon-search"></use>
-          </svg>
-        </button>
+        <button type="submit">Search</button>
       </form>
     </div>
     <div class="gallery">
