--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gallery</title>
+    <title>Homework 11</title>
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
+
   <body>
-    <div class="form-wrapper">
-      <form class="search-form" id="search-form">
-        <input
-          type="text"
-          name="searchQuery"
-          autocomplete="off"
-          placeholder="Search images..."
-        />
-        <button type="submit">Search</button>
-      </form>
-    </div>
+    <form class="search-form" id="search-form">
+      <input
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+      />
+      <button type="submit">&#x1F50E;&#xFE0E;</button>
+    </form>
     <div class="gallery">
       <!-- Obraz karty -->
     </div>
-    <button type="button" class="load-more is-hidden">Load more</button>
-    <button class="top-btn">🔝</button>
-    <script type="module" src="./index.js"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
