--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit">&#x1F50E;&#xFE0E;</button>
+      <button type="submit">Search</button>
     </form>
     <div class="gallery">
       <!-- Obraz karty -->
